force-app/main/default/objects/PO_Payments__c/PO_Payments__c.object-meta.xml
<CustomObject>
    <label>PO Payment</label>
    <nameField>
        <displayFormat>PAY-{0000}</displayFormat>
        <label>PO Payments ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>