force-app/main/default/objects/PO_Payments__c/fields/Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code__c</fullName>
    <formula>Purchase_Order__r.Owner:User.Dealer_Code__c</formula>
    <label>Dealer Code</label>
    <type>Text</type>
</CustomField>