force-app/main/default/objects/PO_Payments__c/fields/Payment_reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_reference__c</fullName>
    <label>Payment reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>