force-app/main/default/objects/PO_Payments__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Purchase Order</label>
    <referenceTo>ProductRequest</referenceTo>
    <relationshipLabel>PO Payments</relationshipLabel>
    <relationshipName>PO_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>