force-app/main/default/objects/PO_Payments__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payment_reference__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Status__c</columns>
    <columns>Order__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All PO Payments</label>
</ListView>